tests/custom/STARIS_2022/operation-type-errors/flatten-type-error-02/stderr.expected
Error:
    Parser error in file: flatten-type-error.essence Error is:
ValidatorError flatten-type-error.essence:2:27:
  |
2 | such that b = (flatten(1, false) = flatten(1, false))
  |                           ^^^^^
Type error:
	Expected: [?]
	Got: bool

flatten-type-error.essence:2:47:
  |
2 | such that b = (flatten(1, false) = flatten(1, false))
  |                                               ^^^^^
Type error:
	Expected: [?]
	Got: bool

